--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript",
-    "plugin:storybook/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "next/typescript", "plugin:storybook/recommended"],
   "rules": {
+    "no-unused-vars": "error",
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-explicit-any": "off"
   }
